# backend_mooner

./: Procfile  README.md  a.py  build.sh  package-lock.json  pyproject.toml  requirements.txt  server.py
config/: ia_config.py  router.py  settings.py  urls.py
mooner/: apps.py
mooner/migrations/: 0001_initial.py  0002_genre_alter_song_options_song_country_song_genre_and_more.py  0003_lunaai.py  0004_remove_lunaai_response.py  0005_lunaai_response.py
mooner/models/: __init__.py  luna.py  producer.py  song.py
mooner/serializers/: __init__.py  luna.py  song.py
mooner/views/: __init__.py  song.py
src/: a.py
src/config/: __init__.py  asgi.py  celery.py  ia_config.py  router.py  settings.py  urls.py
src/core/alternative_api/: recomendations.py  webhook.py
src/core/email_verification/: send_email_verification_artist.py
src/core/microservice/: mercadopago.py  qrcode.py  status.py
src/core/moon_wave/: apps.py  consumers.py  routing.py
src/core/mooner/: admin.py  apps.py
src/core/mooner/migrations/: 0001_initial.py  0002_album_date_realized.py  0002_favorite_historicalhistory_history_playlist_and_more.py  0002_initial.py  0002_remove_album_songs_album_songs.py  0003_alter_album_autor.py  0003_alter_communityposts_songs.py  0003_history.py  0003_remove_song_country.py  0004_communityposts_likes.py  0004_historicalhistory.py  0004_remove_album_description.py  0004_remove_album_songs_album_songs.py  0005_album.py  0005_alter_history_song_alter_history_usuario_favorite.py  0005_playlist.py  0005_playlist_cover_alter_playlist_songs.py  0005_remove_community_country_remove_community_genre.py  0006_album_name_album_post_date.py  0006_merge_20241018_0111.py  0006_remove_communityposts_songs_and_more.py  0007_album_background_dark_color_and_more.py  0007_remove_song_producer_song_artists_and_more.py  0008_communityusers.py  0008_remove_song_duration_remove_song_genre_and_more.py  0009_album_community_communityposts_likedsong.py  0009_remove_communityusers_artist_and_more.py  0010_alter_community_autor.py  0010_communityposts_community_following.py  0011_communityposts_dislikes_alter_communityposts_autor.py  0012_alter_communityposts_community.py
src/core/mooner/models/: CommunityUsers.py  __init__.py  album.py  albuns.py  community.py  (+10 more)
src/core/templates/: back_to_site.html  verification.html
src/core/uploader/: views.py
src/core/usuario/: admin.py  apps.py  authentication.py  managers.py  models.py  router.py  serializers.py  signals.py  views.py
src/utils/: albuns_filter.py  artist_filter.py  communityPosts_filter.py  communityUsers_filter.py  community_filter.py  following_filter.py  history_filter.py  images_filter.py  likedSong_filter.py  playlist_filter.py  song_filter.py
usuario/: admin.py  authentication.py  models.py  views.py
usuario/migrations/: 0001_initial.py  0002_usuario_ddd_usuario_about_usuario_followers_and_more.py  0003_alter_usuario_ddd.py  0004_alter_usuario_telephone.py
(+114 files in other folders)
