[project]
name = "backend_hackaton"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "luansilva", email = "luansilva250807@gmail.com"},
]
dependencies = [
    "django>=5.0.7",
    "setuptools>=72.1.0",
    "pillow>=10.4.0",
    "python-magic>=0.4.27",
    "djangorestframework>=3.15.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
dev = 'python manage.py runserver'
makemigrations = "python manage.py makemigrations"
migrate = "python manage.py migrate"
